fix: prevented hamburger menu disappearing or wrapping at middle resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,11 +226,11 @@ p.home-theme-text {
 
 .gallery-link {
     background: #ffe7ab;
-        font-size: 24px;
-            text-align: center;
-            font-weight: 600;
-            height: 300px;
-            margin-bottom: 57px;
+    font-size: 24px;
+    text-align: center;
+    font-weight: 600;
+    height: 300px;
+    margin-bottom: 57px;
 }
 
 /*---Sign-up*/
@@ -388,10 +388,10 @@ footer li {
     }
 
     #train-track-wide {
-    max-height: 100px;
-    height: auto;
-    width: 80%;
-    display: block;
+        max-height: 100px;
+        height: auto;
+        width: 80%;
+        display: block;
         margin-left: auto;
         margin-right: auto;
         margin-top: 10px;
@@ -400,40 +400,58 @@ footer li {
     }
 
     .track-container-wide {
-            background-color: rgba(102, 0, 0, 0.8);
-                display: flex;
+        background-color: rgba(102, 0, 0, 0.8);
+        display: flex;
     }
-        .gallery-wrap {
-            width: 20%;
-            height: 200px;
-            display: block;
-        }
 
-                .signed-up {
-                    font-size: 40px;
-                }
+    .gallery-wrap {
+        width: 20%;
+        height: 200px;
+        display: block;
+    }
+
+    .signed-up {
+        font-size: 40px;
+    }
 }
 
 @media only screen and (min-width: 822px) {
-    .logo {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
 
     .hmbgr-menu {
         display: none;
     }
+    
 }
 
 @media only screen and (min-width: 991px) {
     .menu-bar {
         font-size: 16px;
     }
-}
 
-@media (max-width: 822px) {
-    .menu-bar {
+    .hidden-col-3 {
         display: none;
     }
+
+    .logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
+
+    @media (max-width: 822px) {
+        .menu-bar {
+            display: none;
+        }
+
+        .hidden-col-3 {
+            display: none;
+        }
+    }
+
+        @media screen and (max-width: 991px) and (min-width: 822px) {
+            .logo {
+                display: block;
+                float: left;
+            }
+        }
